# gpt-api

./: .gitignore  README.md  assistant.json  main.py  pyproject.toml
gpt_api/: functions.py  prompt.py  types.py
knowledgebase/: sample.md
